tests/ui/traits/non_lifetime_binders/late-bound-in-anon-ct.stderr
error: cannot capture late-bound type parameter in constant
  --> $DIR/late-bound-in-anon-ct.rs:5:27
   |
LL |     for<T> [i32; { let _: T = todo!(); 0 }]:,
   |         -                 ^
   |         |
   |         parameter defined here

error: aborting due to 1 previous error

